[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qkd"
version = "0.1.0"
description = "Quantum Key Distribution (BB84) simulator using Cirq"
readme = "docs/QKD_GUIDE.md"
requires-python = ">=3.10"
dependencies = [
    "cirq>=1.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
